# voxel-engine

./: .gitignore  CMakeLists.txt
include/camera/: camera.h
include/component-owner/: componentOwner.h
include/component-owner/player/: player.h  playerInput.h
include/components/: component.h
include/components/camera/: camera.h
include/glad/: glad.h
include/meshes/: basemesh.h  chunkmesh.h  quadmesh.h
include/opengl/shaders/: shader.h
include/screen/texture/: texture.h
include/shaders/: shader.h
include/utils/: debug.h  fps.h  glhandler.h  text.h
include/window/: window.h
include/world/chunk/: chunk.h
src/: main.cpp
src/camera/: camera.cpp
src/component-owner/: componentOwner.cpp
src/component-owner/player/: player.cpp  playerInput.cpp
src/components/: component.cpp
src/components/camera/: camera.cpp
src/meshes/: basemesh.cpp  chunkmesh.cpp  quadmesh.cpp
src/opengl/glad/: glad.c
src/opengl/shaders/: chunkFragment.glsl  chunkVertex.glsl  quadVertex.glsl  shader.cpp  simpleFragment.glsl  simpleVertex.glsl  textFragment.glsl  textVertex.glsl
src/screen/texture/: texture.cpp
src/utils/: fps.cpp  text.cpp
src/window/: window.cpp
src/world/: chunk.cpp
